<resources>
    <string name="app_name">IEAG-CM</string>

    <string name="action_settings">Configuración</string>
    <string name="action_search">Buscar</string>
    <string name="action_carrito">Añadir al carrito</string>

    <string name="item_inicio">Inicio</string>
    <string name="item_asignaturas">Asignaturas</string>
    <string name="item_categorias">Categorías</string>
    <string name="item_configuracion">Configuración</string>
    <string name="item_creditos">Cr\u00e9ditos</string>

    <string name="titulo_horario">Horario</string>

    <string name="titulo_tab_platillos">PLATILLOS</string>
    <string name="titulo_tab_bebidas">BEBIDAS</string>
    <string name="titulo_tab_postres">POSTRES</string>

    <string name="titulo_tab_contabilidad">CONTABILIDAD</string>
    <string name="titulo_tab_historia">HISTORIA</string>
    <string name="titulo_tab_cocina">COCINA</string>
    <string name="titulo_tab_nutricion">NUTRICION</string>
    <string name="titulo_tab_higiene">HIGIENE</string>
    <string name="titulo_tab_ingles">INGLES</string>
    <string name="titulo_tab_Kcal">Kcal</string>
    <string name="titulo_tab_IMC">IMC</string>

    <string name="texto_no_tarjetas">No tienes ninguna tarjeta asociada</string>

    <string name="aqui_logo">Aqui el logo</string>

    <string name="texto_semana1">Semana 1</string>
    <string name="texto_semana2">Semana 2</string>
    <string name="texto_evaluaciones">Calculos</string>
    <string name="etiqueta_contrasena">Contraseña</string>
    <string name="etiqueta_semanas">Semanas</string>
    <string name="etiqueta_calculos">Calculos</string>
    <string name="etiqueta_simaski">SimaskiGroup\u2122</string>

    <string name="titulo_actividad_evalcontabilidad">Evaluaciones</string>

    <string name="intro">
        <![CDATA[
        <div>
           <div>
              <div>
                 <p>Se denomina cocinero profesional a la persona que cocina por oficio y profesi\u00f3n.
                 Las funciones en la cocina est\u00e1n categorizadas, en funci\u00f3n de los conocimientos y
                 las especialidades de cada uno de los tipos de cocinero.
                 </p>
                 <p>El chef debe ser un experto en cocina y conocer con propiedad los productos,
                 la administraci\u00f3n, la contabilidad, el derecho, la nutrici\u00f3n, la enolog\u00eda, los costeos,
                 la qu\u00edmica, la historia y la geograf\u00eda (estos \u00faltimos dos para poder conocer mejor los
                 productos y saber c\u00f3mo utilizarlos adecuadamente), entre otros muchos elementos.
                 Adem\u00e1s, debe ser capaz de liderar a su brigada (t\u00e9rmino acu\u00f1
                 ado por el c\u00e9lebre cocinero
                 franc\u00e9s Auguste Escoffier, que hace referencia a un equipo de personas bajo sus \u00f3rdenes)
                 y mantener siempre un control e higiene excelsos, para brindar un servicio de calidad
                 al comensal.</p>
                 <p>En un restaurante u hotel, el chef es el designado a cargo de la cocina.
                 Tiene a su cargo a una serie de personas que se desarrollan en diversas \u00e1reas
                 dentro de la cocina en la preparaci\u00f3n de platillos por separado; al unificarlos,
                 el resultado final es lo que se le entregar\u00e1 al comensal.</p>
              </div>
           </div>
        </div>
        ]]>
</string>

    <string name="tabla">
        <![CDATA[
		  <div>
					<b>Clasificacion de la Organizacion mundial de la salud:</b>
					<div>
						  <tr>
						   <td>
						      <tr>
						       <th>INDICE MASA CORPORAL \t\t\tCLASIFICACION</th>
						        </tr>
						         <tr>
						          <td>
						           <div>&lt;16.00\t\t\t\t\t\t\t\t\t\t\t\tDelgadez Severa<br/>16.00 - 16.99\t\t\t\t\t\t\t\t\tDelgadez moderada<br/>17.00 - 18.49\t\t\t\t\t\t\t\t\tDelgadez aceptable<br/>18.50 - 24.99\t\t\t\t\t\t\t\t\tPeso Normal<br/>25.00 - 29.99\t\t\t\t\t\t\t\t\tSobrepeso<br/>30.00 - 34.99\t\t\t\t\t\t\t\t\tObeso: Tipo I<br/>35.00 - 40.00\t\t\t\t\t\t\t\t\tObeso: Tipo II<br/>&gt;40.00\t\t\t\t\t\t\t\t\t\t\t\tObeso: Tipo III</div>
						          </td>
						      </tr>
						   </td>
						  </tr>
					</div>
		  </div>
	    ]]>
    </string>

    <string name="formula">
        <![CDATA[
		  <div>
					<b>formula:</b>
					<div>
						  <tr>
						   <td>
						      <tr>
						       <th>FORMULA INDICE MASA CORPORAL</th>
						        </tr>
						         <tr>
						          <td>
						           <div>IMC = peso(kg)\u002faltura\u00B2(m)</div>
						          </td>
						      </tr>
						   </td>
						  </tr>
					</div>
		  </div>
	    ]]>
    </string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="calculo">C\u00C1LCULO DEL IMC:</string>
    <string name="altura">Escribe tu ALTURA en CENTIMETROS</string>
    <string name="peso">Escribe tu PESO en KILOGRAMOS</string>
    <string name="calcular">Calcular</string>
    <string name="resultado">Resultado:</string>
    <string name="imc">Indice de masa comporal:</string>
    <string name="tiene">Usted tiene:</string>
    <string name="limpiar">Limpiar</string>

</resources>
